add first three lessons

--- a/src/pages/projects/create-an-ecommerce-store-with-next-js-and-stripe-checkout/create-a-new-react-application-with-next-js/solution.mdx
+++ b/src/pages/projects/create-an-ecommerce-store-with-next-js-and-stripe-checkout/create-a-new-react-application-with-next-js/solution.mdx
@@ -1,6 +1,5 @@
 export const meta = {
   title: `Create a New React Application with Next.js`,
-  summary: `React is a powerful library that gives us the ability to build dynamic apps with the power of JavaScript and the browser. With it, we can personalize apps and add interactions that allow us to deliver a better user experience to our visitors.\n\nNext.js is a web framework that sits on top of React taking the power of React to another level. With it, we get additional data fetching utilities and site compilation that providers optimized builds with logical ways of managing our data.\n\nHow can we use these tools to build a dynamic web app?`,
   transcript: `Colby Fayock: [0:00] To get started with a Next.js app, we can type yarn create next-app. Let's call this my-ecom-store. Once it's finished creating the app and installing the dependencies, we can cd into that directory, and we can run yarn dev, which is going to start up our development server.\n\n[0:14] When we're ready, we can open up the address at localhost:3000. Once that loads, we can see that we're immediately Welcome to a new Next.js app.\n\n[0:20] Before we move on, let's open this in our favorite text editor, so we can see what's going on. We get a few things by default with the Next.js app. First, we get the pages directory which includes API, which we're not going to use for this, but you can create Lambda functions. We also get an index.js which is our home page and an _app.js that wraps our entire application.\n\n[0:37] If we look inside of our index.js file, we can see that we get a few things by default. We get a Head component, which is going to show us our title of the page. Then, we have a main that wraps the entire page with an h1 that tells us Welcome to the Next.js App, along with the description, and a few cards that link to documentation.\n\n[0:52] We can also see that we have a styles directory which includes some global styles as well as a Home.module.css file that include some styles that are specific to the home page.\n\n[1:01] Our public directory is where we can put files where we want accessible directly and statically from our application. For example, if we want to access the vercel.svg file, we can access that with our server at /vercel.svg.\n\n[1:13] Inside of our home page, we can see that we're already doing just that. With all these files together, we get our new Next.js App.\n`,
   transcript_url: `https://egghead.io/api/v1/lessons/next-js-create-a-new-react-application-with-the-next-js-create-next-app-cli/transcript`,
   media_urls: {
@@ -17,40 +16,6 @@ export const meta = {
       '/projects/create-an-ecommerce-store-with-next-js-and-stripe-checkout/add-and-style-a-grid-of-products-with-images-in-a-next-js-react-app',
   },
 }
-
-## Getting Started
-
-For our first lesson, we're going to walk through building a Next.js app from scratch.
-
-The best part of creating a Next.js app from scratch, is Next.js provides us with all of the tools we need to get up and running quickly with a single line in the terminal.
-
-## Exercises
-
-### 1. Creating a new Next.js app with Create Next App [0:00](0:00)
-
-As you notice, this first lesson directory is empty. That's on purpose!
-
-Our very first exercise is creating a new Next.js app from scratch.
-
-To do this, Next.js provides an easy-to-use tool called Create Next App that we can run right from our terminal that creates a new project, installs the dependencies, and gets us up and running in no time.
-
-This tool uses npm or yarn to clone a repository and run any scripts that gets the project ready to use.
-
-#### Resources
-
-- [Create Next App](https://nextjs.org/docs/api-reference/create-next-app) (nextjs.org)
-
-### 2. Exploring our new Next.js app [0:23](0:23)
-
-After Create Next App finishes running, we should now be ready to start up our local development server and Next.js provides us right away with the commands we should use.
-
-With our local development server up and running, we can get familiar with some of the features Next.js provides out of the box. This includes making changes to our code, such as changing the title of the page, and watching our app automatically update right inside of the browser.
-
-Take some time to look around the project files and Next.js documentation to get an idea of what you just created.
-
-#### Resources
-
-- [Getting Started - Next.js Docs](https://nextjs.org/docs/getting-started) (nextjs.org)
 
 ## Extra Credit
 
@@ -70,17 +35,7 @@ Update the page title (`<h1>`) and description (`<p>`) at the top of the page to
 
 import ResourceLayout from 'components/pages/projects/create-an-ecommerce-store-with-next-js-and-stripe-checkout/layouts/resource'
 
-export const Sidebar = () => (
-  <div>
-    <h4 className="font-bold text-lg">Objectives</h4>
-    <div className="prose leading-tight">
-      <ol>
-        <li>Create a new Next.js React application</li>
-        <li>Get familiar with the features of Next.js</li>
-      </ol>
-    </div>
-  </div>
-)
+export const Sidebar = () => <div />
 
 export default ({meta, children}) => (
   <ResourceLayout meta={meta} sidebar={<Sidebar />}>
